--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.zhy:base-rvadapter:3.0.3'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.orhanobut:logger:1.15'
 }
